# aws-mcp-server

./: .env.example  .gitignore  DESIGN.md  HISTORY.md  README.md  coverage.json  idp_config.example.yaml  policy.yaml  pyproject.toml  requirements.txt  server.py  tips.txt  verify_all_services.py
.github/workflows/: ci.yml
docs/: AUTH_IMPLEMENTATION_FINAL.md  architecture.md
docs/smithy_stub/: ec2.json  iam.json
scripts/: diagnose_s3_body.py  gemini-sso.sh  identify_handler.py  list_s3_handlers.py  repro_blob.py  repro_casing.py  repro_dynamodb.py  repro_extra_types.py  repro_fastmcp.py  repro_primitives.py  survey_orphan_ops.py  survey_serialization.py  try_unregister.py  verify_cross_service.py  verify_ec2_rescue.py  verify_ec2_types.py  verify_fix_handler.py  verify_log_output.py  verify_policy_update.py  verify_rds_methods.py  verify_s3_policy.py  verify_xform.py
src/aws_cli_mcp/: __init__.py  app.py  config.py  logging_utils.py  mcp_runtime.py  server.py
src/aws_cli_mcp/audit/: artifacts.py  db.py  models.py
src/aws_cli_mcp/auth/: __init__.py  context.py  identity_center_middleware.py  idp_config.py  multi_idp.py  multi_user_guard.py  oauth_proxy.py  protected_resource.py  role_mapper.py
src/aws_cli_mcp/aws_credentials/: __init__.py  cache.py  identity_center.py  (+1 more)
test_data/: test.db
test_data/artifacts/: 4a91108b3a02480f9f4ce2d39970789a-40aee802a1454f7bb0fe25d48da45627.json  4a91108b3a02480f9f4ce2d39970789a-affdaf495a4643a7b2161fee3eed9af0.json
tests/: conftest.py  reproduce_issue.py  test_app_context.py  test_audit_artifacts_serialization.py  test_audit_cleanup.py  test_audit_db.py  test_audit_middleware.py  test_auth_context.py  test_aws_credentials.py  test_aws_unified.py  test_aws_unified_coverage.py  test_config_coverage.py  test_execution.py  test_http_auth_discovery.py  test_http_nonblocking.py  test_identity_center_middleware.py  test_idp_config_loader.py  test_jsonschema_coverage.py  test_local_file.py  test_logging_utils.py  test_multi_idp_validator.py  test_multi_user_guard.py  test_oauth_proxy.py  test_policy_engine.py  test_policy_loader.py  test_protected_resource.py  test_role_mapper.py  test_runtime.py  test_schema_generator_coverage.py  test_security_middleware.py  test_server.py  test_smithy_catalog.py  test_smithy_loader_registry.py  test_smithy_parser.py  test_smithy_schema.py  test_smithy_sync_version.py  test_sts_provider.py  test_tools_base.py  test_tools_registry.py  test_transport_http_server.py  (+3 more)
(+34 files in other folders)
